--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.27.0",
+        "react-type-animation": "^3.2.0",
         "shadertoy-react": "^1.1.2"
     },
     "devDependencies": {
