--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-qr-code": "^2.0.15",
         "react-router-dom": "^6.27.0",
         "shadertoy-react": "^1.1.2"
     },
